<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.baidu.xcloud.noteslist.demo.MainActivity" >

    <item android:id="@+id/action_text"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/action_text"
        android:showAsAction="ifRoom"/>
    
    <item android:id="@+id/action_picture"
        android:icon="@drawable/ic_action_picture"
        android:title="@string/action_picture"
        android:showAsAction="ifRoom"/>
    
    <item android:id="@+id/action_todo"
        android:icon="@drawable/ic_action_todo"
        android:title="@string/action_todo"
        android:showAsAction="ifRoom"/>
    
     <item android:id="@+id/action_bill"
        android:icon="@drawable/ic_action_bill"
        android:title="@string/action_bill"
        android:showAsAction="ifRoom"/>
     
     <item android:id="@+id/action_record"
        android:icon="@drawable/ic_action_mic"
        android:title="@string/action_record"
        android:showAsAction="ifRoom"/>
     
     <!--  <item android:id="@+id/action_video"
        android:icon="@drawable/ic_action_video"
        android:title="@string/action_video"
        android:showAsAction="ifRoom"/>-->

</menu>
